Endpoints arreglados