@@ -5,12 +5,12 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-
 @Entity
 @Table(name = "usuarios")
 @Getter
@@ -30,7 +30,7 @@ public class Usuario implements UserDetails {
     private String email;
 
     @Column(name = "contraseña", nullable = false)
-    private String contraseña;
+    private String password;
 
     @ManyToOne(fetch = FetchType.EAGER)
     @JoinColumn(name = "rol_id", nullable = false)
@@ -40,24 +40,13 @@ public class Usuario implements UserDetails {
     private String foto;
 
     @OneToMany(mappedBy = "usuario", cascade = CascadeType.ALL, orphanRemoval = true)
+    // @JsonIgnore  // ← opcional, si serializas este objeto
     private List<Proyecto> proyectos;
-/*
-    @OneToMany(mappedBy = "user")
-    private List<ProjectUser> projectUsers;
-
-
-
- */
 
     // Implementación de UserDetails
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // Puedes devolver roles si los implementas como GrantedAuthority
-    }
-
-    @Override
-    public String getPassword() {
-        return this.contraseña;
+        return List.of(new SimpleGrantedAuthority(userRol.getRolName()));
     }
 
     @Override
@@ -66,22 +55,12 @@ public class Usuario implements UserDetails {
     }
 
     @Override
-    public boolean isAccountNonExpired() {
-        return true;
+    public String getPassword() {
+        return this.password;
     }
 
-    @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
-
-    @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isEnabled() {
-        return true;
-    }
+    @Override public boolean isAccountNonExpired() { return true; }
+    @Override public boolean isAccountNonLocked() { return true; }
+    @Override public boolean isCredentialsNonExpired() { return true; }
+    @Override public boolean isEnabled() { return true; }
 }
